--- a/source/catalog.html
+++ b/source/catalog.html
@@ -16,21 +16,16 @@
     </a>
     <img class="header__logo-text" src="./img/logo-text.svg" alt="Текстовый логотип компании Cat energy">
     <button class="header__nav-toogle" type="button">
-      <svg width="24" height="18" viewBox="0 0 24 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <line y1="1.25" x2="24" y2="1.25" stroke="black" stroke-width="1.5" />
-        <line y1="9.25" x2="24" y2="9.25" stroke="black" stroke-width="1.5" />
-        <line y1="17.25" x2="24" y2="17.25" stroke="black" stroke-width="1.5" />
-      </svg>
       <span class="visually-hidden">Открыть меню</span>
     </button>
-    <nav class="main-nav">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item">
-            <a class="main-nav__link" href="index.html">Главная</a>
+            <a class="main-nav__link main-nav__link--current" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--current" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Подбор программы</a>
@@ -49,14 +44,22 @@
             alt="Cat Energy PRO 500 г (Курица)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">500 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-type">Курица</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">700 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>700 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -65,14 +68,22 @@
             alt="Cat Energy PRO 1000 г (Рыба)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">1000 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-amount">Курица</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">1000 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>1000 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -81,14 +92,22 @@
             alt="Cat Energy PRO 500 г (Рыба)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy PRO 500 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">500 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-amount">Рыба</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">700 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>700 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -97,14 +116,22 @@
             alt="Cat Energy PRO 1000 г (Рыба)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">1000 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-amount">Рыба</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">1000 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>1000 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -113,14 +140,22 @@
             alt="Cat Energy SLIM 500 г (Гречка)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">500 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-amount">Гречка</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">400 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>400 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -129,14 +164,22 @@
             alt="Cat Energy SLIM 1000 г (Гречка)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy PRO 1000 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">500 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-amount">Гречка</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">700 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>1000 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>700 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -145,14 +188,22 @@
             alt="Cat Energy SLIM 500 г (Рис)">
           <div class="products__descritpion">
             <h3 class="products__title">Cat Energy SLIM 500 г</h3>
-            <div class="products__stats">
-              <p class="products__weight">Масса</p>
-              <p class="products__weight-amount">500 г</p>
-              <p class="products__flavor">Вкус</p>
-              <p class="products__flavor-amount">Рис</p>
-              <p class="products__price">Цена</p>
-              <p class="products__price-amount">500 ₽</p>
-            </div>
+            <table class="products__options">
+              <tbody>
+                <tr>
+                  <td>Объем</td>
+                  <td>500 г</td>
+                </tr>
+                <tr>
+                  <td>Вкус</td>
+                  <td>Курица</td>
+                </tr>
+                <tr>
+                  <td>Цена</td>
+                  <td>500 ₽</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <button class="button products__order-button" type="button">Заказать</button>
         </li>
@@ -214,9 +265,11 @@
         <h2 class="partnership__title partnership__title--small">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="partnership__adress">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
       </div>
-      <img class="partnership__adress-img" src="./img/partnership-map-img.png" width="320" height="362" alt="Мы на ходимся здесь: ул. Большая
-      Конюшенная, д. 19/8
-      Санкт-Петербург">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426"
+        width="320" height="362" allowfullscreen title="Мы на ходимся здесь: ул. Большая
+        Конюшенная, д. 19/8
+        Санкт-Петербург"></iframe>
     </section>
     <ul class="page-footer__list">
       <li class="page-footer__item">
@@ -261,5 +314,7 @@
     </ul>
   </footer>
 </body>
+
+<script src="./script.js"></script>
 
 </html>
