--- a/source/form.html
+++ b/source/form.html
@@ -22,8 +22,8 @@
         <source media="(min-width: 1440px)" srcset="./img/logo-desktop.svg" width="202" height="57"
           type="image/svg+xml">
         <source media="(min-width: 768px)" srcset="./img/logo-tablet.svg" width="175" height="51" type="image/svg+xml">
-        <img class="header__logo-img" src="./img/logo-mobile-img.svg" width="33" height="37"
-          alt="Логотип компании Cat energy">
+        <img class="header__logo-img" src="./img/logo-mobile-img.svg" srcset="./img/logo-mobile-img.svg" width="33"
+          height="37" alt="Логотип компании Cat energy">
       </picture>
     </a>
     <img class="header__logo-text" src="./img/logo-text.svg" width="101" height="18"
@@ -38,11 +38,11 @@
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-nav__link" href="catalog.html">Каталог
+              продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--current" href="form.html">Подбор
-              программы</a>
+            <a class="main-nav__link main-nav__link--current" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </div>
