--- a/source/index.html
+++ b/source/index.html
@@ -28,10 +28,10 @@
     </a>
     <img class="header__logo-text" src="./img/logo-text.svg" width="101" height="18"
       alt="Текстовый логотип компании Cat energy">
-    <button class="header__nav-toogle header__nav-toogle--active" type="button">
+    <button class="header__nav-toogle" type="button">
       <span class="visually-hidden">Открыть меню</span>
     </button>
-    <nav class="main-nav main-nav--opened">
+    <nav class="main-nav main-nav--closed main-nav--nojs">
       <div class="main-nav__wrapper">
         <ul class="main-nav__list">
           <li class="main-nav__item">
@@ -99,19 +99,19 @@
     <section class="advantages">
       <h2 class="advantages__title">Как это работает</h2>
       <ul class="advantages__list">
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item-nutrients">
           <p class="advantages__description advantages__nutrients">Функциональное питание содержит только полезные
             питательные вещества.</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item-consistency">
           <p class="advantages__description advantages__consistency">Выпускается в виде порошка, который нужно лишь
             залить кипятком и готово.</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item-meal">
           <p class="advantages__description advantages__meal">Замените один-два приема обычной еды на наше
             функциональное питание.</p>
         </li>
-        <li class="advantages__item">
+        <li class="advantages__item advantages__item-duration">
           <p class="advantages__description advantages__duration">Уже через месяц наслаждайтесь изменениями к
             лучшему вашего питомца!</p>
         </li>
@@ -205,7 +205,8 @@
       </li>
     </ul>
   </footer>
-  <script src="./js/script.js"></script>
+
 </body>
+<script src="./js/script.js"></script>
 
 </html>
